# agentic-research-template

./: LICENSE  README.md  SETUP.md  init.py  init_config.example.json
examples/: council_report_example.md  decisions_log_example.md  sop_example.md
template/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
template/.context/: README.md
template/docs/: data_artifacts.md  decisions_log.md  experiment_results.md  implementation_plan.md  milestones.md  research_strategy.md
template/docs/research_strategy/: README.md
template/docs/templates/: changelog_entry.md  council_report.md  handover.md  sop.md
template/global_claude_md/: CLAUDE.md
template/global_memory/: MEMORY.md
template/jobs/: CLUSTER_PROMPT.md  PREAMBLE.sh  README_RUN.md
template/results/: results_scaffold.md
template/src/{{PACKAGE_NAME}}/: __init__.py
template/src/{{PACKAGE_NAME}}/data/: __init__.py
template/src/{{PACKAGE_NAME}}/eval/: __init__.py
template/src/{{PACKAGE_NAME}}/models/: __init__.py
template/tests/: conftest.py
