# [CUSTOMIZE: Replace placeholder values with your project specifics]
[project]
name = "mypackage"
version = "0.1.0"
description = "Project description here."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Author Name", email = "author@example.com" },
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "certifi",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypackage"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mypackage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
